--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="ru.ftc.todoapp">
 
     <application
+            android:fullBackupContent="false"
             android:name=".app.App"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
@@ -11,11 +12,18 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
 
-        <activity android:name=".app.MainActivity">
+        <activity
+                android:name=".feature.main.MainActivity"/>
+
+        <activity
+                android:name=".feature.login.ui.LoginActivity"
+                android:windowSoftInputMode="adjustResize">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+
         </activity>
 
     </application>
