--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@ buildscript {
 
     ext.kotlinVersion = "1.3.41"
     ext.gradleVersion = "3.4.1"
-    ext.mavenBaseUrl = "http://maven.madg.ftc.ru"
 
     repositories {
         jcenter()
@@ -28,9 +27,11 @@ ext {
 
     junitVersion = "4.12"
 
-    appcompatVersion = "1.0.2"
+    appcompatVersion = "1.1.0"
     materialVersion = "1.0.0"
     constraintVersion = "1.1.3"
+
+    gsonVersion = "2.8.5"
 }
 
 allprojects {
