--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ ext {
     constraintVersion = "1.1.3"
 
     gsonVersion = "2.8.5"
+
+    daggerVersion = "2.24"
 }
 
 allprojects {
@@ -80,6 +82,10 @@ subprojects {
 
         // Logging
         implementation "com.jakewharton.timber:timber:$timberVersion"
+
+        //Dagger
+        implementation "com.google.dagger:dagger:$daggerVersion"
+        kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 
         // Unit tests
         testImplementation "junit:junit:$junitVersion"
