--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 buildscript {
 
-    ext.kotlinVersion = "1.3.41"
-    ext.gradleVersion = "3.4.1"
+    apply from: "dependencies.gradle"
 
     repositories {
         jcenter()
@@ -9,29 +8,10 @@ buildscript {
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:$gradleVersion"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-        classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlinVersion"
+        classpath classpaths.gradlePlugin
+        classpath classpaths.kotlin
+        classpath classpaths.kotlinAndroidExt
     }
-}
-
-ext {
-    minApiVersion = 19
-    maxApiVersion = 28
-    aptVersion = "28.0.3"
-
-    appVersionName = "1.0.0"
-    appVersionCode = 1
-
-    timberVersion = "4.6.1"
-
-    junitVersion = "4.12"
-
-    appcompatVersion = "1.1.0"
-    materialVersion = "1.0.0"
-    constraintVersion = "1.1.3"
-
-    gsonVersion = "2.8.5"
 }
 
 allprojects {
@@ -54,13 +34,13 @@ subprojects {
 
     android {
 
-        compileSdkVersion maxApiVersion
-        buildToolsVersion aptVersion
+        compileSdkVersion configs.compileSdk
+        buildToolsVersion configs.buildTools
 
         defaultConfig {
 
-            minSdkVersion minApiVersion
-            targetSdkVersion maxApiVersion
+            minSdkVersion configs.minSdk
+            targetSdkVersion configs.targetSdk
 
             if (project.name == 'app') {
                 applicationVariants.all { variant ->
@@ -76,13 +56,13 @@ subprojects {
     dependencies {
 
         // Kotlin
-        implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
+        implementation libs.kotlin
 
         // Logging
-        implementation "com.jakewharton.timber:timber:$timberVersion"
+        implementation libs.timber
 
         // Unit tests
-        testImplementation "junit:junit:$junitVersion"
+        testImplementation testLibs.junit
     }
 }
 
