--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -12,7 +12,7 @@ ext {
     versions = [
             "appCompat"       : "1.1.0",
             "constraintlayout": "1.1.3",
-            "gradlePlugin"    : "4.1.0-alpha10",
+            "gradlePlugin"    : "4.0.0",
             "gson"            : "2.8.5",
             "kotlin"          : "1.3.72",
             "lifecycle"       : "2.2.0",
