--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
             android:theme="@style/AppTheme">
 
         <activity
-                android:name=".ui.MainActivity"/>
+                android:name=".task.ui.TaskActivity"/>
 
         <activity
                 android:name=".login.ui.LoginActivity"
