--- a/login/src/main/AndroidManifest.xml
+++ b/login/src/main/AndroidManifest.xml
@@ -2,4 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ru.ftc.todoapp.login">
 
+    <application>
+        <activity
+            android:name=".ui.LoginActivity"
+            android:windowSoftInputMode="adjustResize"/>
+    </application>
+
 </manifest>
