--- a/task/src/main/AndroidManifest.xml
+++ b/task/src/main/AndroidManifest.xml
@@ -2,4 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ru.ftc.todoapp.task">
 
+    <application>
+        <activity android:name=".ui.TaskActivity"/>
+    </application>
+
 </manifest>
