--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -12,13 +12,14 @@ ext {
     versions = [
             "appCompat"       : "1.1.0",
             "constraintlayout": "1.1.3",
-            "gradlePlugin"    : "4.0.0",
+            "gradlePlugin"    : "4.1.0-beta01",
             "gson"            : "2.8.5",
             "kotlin"          : "1.3.72",
             "lifecycle"       : "2.2.0",
             "material"        : "1.0.0",
             "timber"          : "4.6.1",
             "junit"           : "4.12",
+            "koin"            : "2.1.6",
     ]
 
     classpaths = [
@@ -28,12 +29,16 @@ ext {
     ]
 
     libs = [
-            "appCompat" : "androidx.appcompat:appcompat:$versions.appCompat",
-            "constraint": "androidx.constraintlayout:constraintlayout:$versions.constraintlayout",
-            "gson"      : "com.google.code.gson:gson:$versions.gson",
-            "kotlin"    : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin",
-            "material"  : "com.google.android.material:material:$versions.material",
-            "timber"    : "com.jakewharton.timber:timber:$versions.timber",
+            "appCompat"            : "androidx.appcompat:appcompat:$versions.appCompat",
+            "constraint"           : "androidx.constraintlayout:constraintlayout:$versions.constraintlayout",
+            "gson"                 : "com.google.code.gson:gson:$versions.gson",
+            "kotlin"               : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin",
+            "material"             : "com.google.android.material:material:$versions.material",
+            "timber"               : "com.jakewharton.timber:timber:$versions.timber",
+            "koinAndroid"          : "org.koin:koin-android:${versions.koin}",
+            "koinAndroidxScope"    : "org.koin:koin-androidx-scope:${versions.koin}",
+            "koinAndroidxViewmodel": "org.koin:koin-androidx-viewmodel:${versions.koin}",
+            "koinAndroidxFragment" : "org.koin:koin-androidx-fragment:${versions.koin}"
     ]
 
     testLibs = [
