--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ android {
 dependencies {
     implementation project(":core")
     implementation project(":login")
+    implementation project(":login-repository")
     implementation project(":task")
 
     //Android
