--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name = "di-demo-app"
 
-include (':app', ':core', ':login', ':task')
+include (':app', ':core', ':login', ':login-repository', ':task')
