--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -10,6 +10,7 @@ ext {
     ]
 
     versions = [
+            "dagger"          : "2.28.1",
             "appCompat"       : "1.1.0",
             "constraintlayout": "1.1.3",
             "gradlePlugin"    : "4.0.0",
@@ -28,12 +29,14 @@ ext {
     ]
 
     libs = [
-            "appCompat" : "androidx.appcompat:appcompat:$versions.appCompat",
-            "constraint": "androidx.constraintlayout:constraintlayout:$versions.constraintlayout",
-            "gson"      : "com.google.code.gson:gson:$versions.gson",
-            "kotlin"    : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin",
-            "material"  : "com.google.android.material:material:$versions.material",
-            "timber"    : "com.jakewharton.timber:timber:$versions.timber",
+            "dagger"        : "com.google.dagger:dagger:$versions.dagger",
+            "daggerCompiler": "com.google.dagger:dagger-compiler:$versions.dagger",
+            "appCompat"     : "androidx.appcompat:appcompat:$versions.appCompat",
+            "constraint"    : "androidx.constraintlayout:constraintlayout:$versions.constraintlayout",
+            "gson"          : "com.google.code.gson:gson:$versions.gson",
+            "kotlin"        : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin",
+            "material"      : "com.google.android.material:material:$versions.material",
+            "timber"        : "com.jakewharton.timber:timber:$versions.timber",
     ]
 
     testLibs = [
