--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,15 @@ buildscript {
     }
 }
 
+plugins {
+    id "scabbard.gradle" version "0.5.0"
+}
+
+scabbard {
+    enabled true
+    outputFormat "png"
+}
+
 allprojects {
     repositories {
         jcenter()
@@ -35,7 +44,6 @@ subprojects {
     android {
 
         compileSdkVersion configs.compileSdk
-        buildToolsVersion configs.buildTools
 
         defaultConfig {
 
